tests/snapshots/mcp_scenarios__scoped-jar-resource-content-search.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "incomplete": false,
  "results": [
    {
      "context": "feature.provider=org.example.Provider",
      "entry": "config/inspection.properties",
      "jar": {
        "artifact_id": "resource-fixture",
        "class_count": 0,
        "coordinate": "org.libs:resource-fixture:1.0",
        "entry_count": 3,
        "group_id": "org.libs",
        "path": "org/libs/resource-fixture/1.0/resource-fixture-1.0.jar",
        "version": "1.0"
      },
      "line": 1
    }
  ],
  "scanned_bytes": 120
}
