tests/snapshots/mcp_scenarios__scoped-outbound-class-reference-search.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "results": [
    {
      "kind": "class",
      "source_class": "org.example.Foo",
      "source_jar": {
        "artifact_id": "helper",
        "class_count": 2,
        "coordinate": "org.libs:helper:2.0",
        "entry_count": 2,
        "group_id": "org.libs",
        "path": "org/libs/helper/2.0/helper-2.0.jar",
        "version": "2.0"
      },
      "target_artifacts": [],
      "target_owner": "java.lang.Object"
    }
  ]
}
