tests/snapshots/mcp_scenarios__scoped-source-declaration-lookup.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "ambiguous_candidates": [],
  "results": [
    {
      "class_name": "org.example.Foo",
      "end_line": 1,
      "entry": "org/example/Foo.java",
      "kind": "class",
      "name": "org.example.Foo",
      "source": "package org.example; public class Foo { int scoped = 2; }",
      "source_jar": {
        "artifact_id": "helper",
        "class_count": 0,
        "classifier": "sources",
        "coordinate": "org.libs:helper:2.0:sources",
        "entry_count": 1,
        "group_id": "org.libs",
        "path": "org/libs/helper/2.0/helper-2.0-sources.jar",
        "version": "2.0"
      },
      "start_line": 1,
      "truncated": false
    }
  ]
}
