tests/snapshots/mcp_scenarios__scoped-type-hierarchy.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "results": [
    {
      "depth": 1,
      "jar": {
        "artifact_id": "helper",
        "class_count": 2,
        "coordinate": "org.libs:helper:2.0",
        "entry_count": 2,
        "group_id": "org.libs",
        "path": "org/libs/helper/2.0/helper-2.0.jar",
        "version": "2.0"
      },
      "path": [
        "java.lang.Object",
        "org.example.Foo"
      ],
      "relation": "extends",
      "type_name": "org.example.Foo"
    },
    {
      "depth": 1,
      "jar": {
        "artifact_id": "helper",
        "class_count": 2,
        "coordinate": "org.libs:helper:2.0",
        "entry_count": 2,
        "group_id": "org.libs",
        "path": "org/libs/helper/2.0/helper-2.0.jar",
        "version": "2.0"
      },
      "path": [
        "java.lang.Object",
        "org.libs.ScopedOnly"
      ],
      "relation": "extends",
      "type_name": "org.libs.ScopedOnly"
    }
  ]
}
