tests/snapshots/mcp_scenarios__service-provider-search.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "results": [
    {
      "descriptor_kind": "service_loader",
      "entry": "META-INF/services/example.Service",
      "jar": {
        "artifact_id": "demo",
        "class_count": 2,
        "coordinate": "org.example:demo:1.0",
        "entry_count": 6,
        "group_id": "org.example",
        "path": "org/example/demo/1.0/demo-1.0.jar",
        "version": "1.0"
      },
      "provider": "org.example.Foo",
      "service": "example.Service"
    }
  ]
}
