tests/snapshots/mcp_scenarios__source-by-version.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "results": [
    {
      "class_name": "org.example.Foo",
      "entry": "org/example/Foo.java",
      "source": "package org.example; public class Foo { int version = 2; }",
      "source_jar": {
        "artifact_id": "demo",
        "class_count": 0,
        "classifier": "sources",
        "coordinate": "org.example:demo:2.0:sources",
        "entry_count": 1,
        "group_id": "org.example",
        "path": "org/example/demo/2.0/demo-2.0-sources.jar",
        "version": "2.0"
      },
      "truncated": false
    }
  ]
}
