tests/snapshots/mcp_scenarios__source-from-scoped-sibling.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "results": [
    {
      "class_name": "org.example.Foo",
      "entry": "org/example/Foo.java",
      "source": "package org.example; public class Foo { int scoped = 2; }",
      "source_jar": {
        "artifact_id": "helper",
        "class_count": 0,
        "classifier": "sources",
        "coordinate": "org.libs:helper:2.0:sources",
        "entry_count": 1,
        "group_id": "org.libs",
        "path": "org/libs/helper/2.0/helper-2.0-sources.jar",
        "version": "2.0"
      },
      "truncated": false
    }
  ]
}
