tests/snapshots/mcp_scenarios__spring-provider-search.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "results": [
    {
      "descriptor_kind": "spring_factories",
      "entry": "META-INF/spring.factories",
      "jar": {
        "artifact_id": "demo",
        "class_count": 2,
        "coordinate": "org.example:demo:1.0",
        "entry_count": 6,
        "group_id": "org.example",
        "path": "org/example/demo/1.0/demo-1.0.jar",
        "version": "1.0"
      },
      "provider": "org.example.Bar",
      "service": "example.Factory"
    }
  ]
}
